fix: overlay covering carousel on watch page

--- a/src/components/Panel/Panel.module.scss
+++ b/src/components/Panel/Panel.module.scss
@@ -60,7 +60,7 @@
 .overlay {
   position: absolute;
   width: 100%;
-  height: 110%;
+  height: 102%;
   z-index: variable.$z-index-1;
   left: 0;
   top: 0;
